# -Long-Horizon-Agent-Benchmark-GLM-5.1-vs-Kimi-K2.6-vs-DeepSeek-V4-Pro

./: .env.example  .gitignore  BUILD_NOTES.md  MODELS.md  Makefile  ORCHESTRATOR_LOG.md  PUBLISH.md  README.md  pyproject.toml  requirements.txt
.tmp/: neo_exec_0660cbca.sh  neo_exec_d820134a.sh
datasets/: dataset_card.md
datasets/test/: dataset_card.md
plans/: plan.md
results/deepseek/: results.json  results_deepseek-v4-pro.json
results/deepseek/traces/: add_docstrings.json  add_tests.json  add_type_hints.json  analyze_csv.json  clean_data.json  compare_libraries.json  create_visualization.json  extract_class.json  find_best_practices.json  find_bug.json  find_documentation.json  fix_syntax_error.json  generate_report.json  optimize_code.json  refactor_function.json  refactor_legacy.json  rename_variables.json  research_api_usage.json  statistical_analysis.json  summarize_article.json
results/kimi/: results.json  results_kimi-k2.6.json
results/kimi/traces/: add_docstrings.json  add_tests.json  add_type_hints.json  analyze_csv.json  clean_data.json  compare_libraries.json  create_visualization.json  extract_class.json  find_best_practices.json  find_bug.json  find_documentation.json  fix_syntax_error.json  generate_report.json  optimize_code.json  refactor_function.json  refactor_legacy.json  rename_variables.json  research_api_usage.json  statistical_analysis.json  summarize_article.json
results/opus/: results.json  results_opus-4.7.json
results/opus/traces/: add_docstrings.json  add_tests.json  add_type_hints.json  analyze_csv.json  clean_data.json  compare_libraries.json  create_visualization.json  extract_class.json  find_best_practices.json  find_bug.json  find_documentation.json  fix_syntax_error.json  generate_report.json  optimize_code.json  refactor_function.json  refactor_legacy.json  rename_variables.json  research_api_usage.json  statistical_analysis.json  summarize_article.json
scripts/: render_svg.py  rerun_failed.py
src/long_horizon_bench/: __init__.py  cli.py  dataset.py  judge.py  metrics.py  plots.py  runner.py
src/long_horizon_bench/models/: __init__.py  base.py  deepseek.py  glm.py  kimi.py  opus.py
src/long_horizon_bench/tasks/: __init__.py  base.py  data_analysis_tasks.py  debugging_tasks.py  refactoring_tasks.py  research_tasks.py
src/long_horizon_bench/tools/: __init__.py  base.py  code_search.py  file_edit.py  shell_exec.py  web_search.py
tests/: test_dataset.py  test_models.py  test_runner.py  test_tasks.py  test_tools.py
