[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "long-horizon-bench"
version = "0.1.0"
description = "Production-ready long-horizon agent benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Long Horizon Bench Team"}]
keywords = ["agent", "benchmark", "llm", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "tenacity>=8.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.0",
    "pre-commit>=3.0",
]

[project.scripts]
lhb = "long_horizon_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
strict_equality = true
ignore_missing_imports = true

# CLI is argparse glue; relaxed type checking to avoid friction without losing
# type safety on the core library.
[[tool.mypy.overrides]]
module = "long_horizon_bench.cli"
disallow_untyped_defs = false
disable_error_code = ["call-arg", "no-untyped-def"]

# Async iterator subtype quirks in chat_stream return types — see BUILD_NOTES.md.
[[tool.mypy.overrides]]
module = "long_horizon_bench.models.*"
disable_error_code = ["override"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
